# OCR

./: .gitignore  README.md  pyproject.toml
src/receipt_ocr/: __init__.py  cli.py  cord.py  fields.py  ocr_engine.py  preprocess.py  types.py
tests/: test_fields.py
