[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-ocr"
version = "0.1.0"
description = "OCR pipeline for grocery and food bills using EasyOCR with CORD dataset tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "easyocr>=1.7.1",
  "opencv-python>=4.9.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
receipt-ocr = "receipt_ocr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
